# bsu_workshop

./: .pre-commit-config.yaml  README.md  pyproject.toml
ml_worker/: predict.py  train.py
