[tool.poetry]
name = "bsu-workshop"
version = "0.1.0"
description = "Workshop codes for BSU MSDS Students"
authors = ["ninz <nreclarin@gmail.com>"]
readme = "README.md"
packages = [{include = "bsu_workshop"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.93.0"
jupyter = "^1.0.0"
scikit-learn = "^1.2.2"
opencv-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
